[package]
name = "labview-interop"
version = "0.1.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/WiresmithTech/Rust-LabVIEW-Interop"
repository = "https://github.com/WiresmithTech/Rust-LabVIEW-Interop"
description = "Types and wrappers for interperating with LabVIEW when called as a library"
keywords = ["labview", "ni"]
readme = "..\\README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
chrono = { version = "~0.4.23", optional = true }
dlopen2 = { version = "0.5"}
dlopen2_derive = "0.3"
ctor = "0.2.4"

[features]
default = ["sync"]
chrono = ["dep:chrono"]
sync = []