[package]
name = "labview-interop"
version = "0.3.0"
edition = "2021"
license = "MIT"
homepage = "https://github.com/WiresmithTech/Rust-LabVIEW-Interop"
repository = "https://github.com/WiresmithTech/Rust-LabVIEW-Interop"
description = "Types and wrappers for interperating with LabVIEW when called as a library"
keywords = ["labview", "ni"]
readme = "..\\README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
chrono = { version = "~0.4.23", optional = true }
dlopen2 = { version = "0.5", optional = true }
dlopen2_derive = { version = "0.3", optional = true }
ndarray = { version = "0.15", optional = true }
ctor = { version = "0.2.4" }
encoding_rs = "0.8"
codepage = "0.1"
num_enum = "0.7.2"

[features]
default = ["sync"]
chrono = ["dep:chrono"]
sync = ["link"]
link = ["dep:dlopen2", "dep:dlopen2_derive"]
ndarray = ["dep:ndarray"]
